# dispatch-py

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  buf.gen.yaml  buf.work.yaml  coroutine.py  index.html  main.py  mkdocs.yml  my_cool_example.py  pyproject.toml  requirements.txt  setup.py  versions.json
.github/: release.yml
.github/workflows/: docs.yml  pypi.yml  test.yml
docs/: gen-api.py  index.md
examples/: auto_retry.py  fanout.py  getting_started.py  github_stats.py  test_examples.py
examples/auto_retry/: app.py  test_app.py
examples/fanout/: fanout.py  test_app.py  test_fanout.py
examples/getting_started/: app.py  test_app.py
examples/github_stats/: app.py  test_app.py
main/: 404.html  index.html  objects.inv
main/reference/SUMMARY/: index.html
main/reference/dispatch/: index.html
main/reference/dispatch/aiohttp/: index.html
main/reference/dispatch/any/: index.html
main/reference/dispatch/asyncio/: index.html
main/reference/dispatch/client/: index.html
main/reference/dispatch/config/: index.html
main/reference/dispatch/coroutine/: index.html
main/reference/dispatch/error/: index.html
main/reference/dispatch/experimental/: index.html
main/reference/dispatch/fastapi/: index.html
main/reference/dispatch/flask/: index.html
main/reference/dispatch/function/: index.html
main/reference/dispatch/http/: index.html
main/reference/dispatch/id/: index.html
main/reference/dispatch/integrations/: index.html
main/reference/dispatch/proto/: index.html
main/reference/dispatch/scheduler/: index.html
main/reference/dispatch/signature/: index.html
main/reference/dispatch/status/: index.html
main/reference/dispatch/test/: index.html
main/search/: search_index.json
mkdocs/: index.html  objects.inv
src/buf/validate/: expression_pb2.py  expression_pb2.pyi  validate_pb2.py  validate_pb2.pyi
src/buf/validate/priv/: private_pb2.py  private_pb2.pyi
src/dispatch/: __init__.py  aiohttp.py  any.py  app.py  asyncio.py  client.py  config.py  coroutine.py  directive.py  error.py  fastapi.py  flask.py  function.py  grpc.py  http.py  id.py  proto.py  registry.py  remote.py  scheduler.py  status.py  test.py
src/dispatch/asyncio/: fastapi.py
src/dispatch/experimental/: lambda_handler.py
src/dispatch/experimental/durable/: README.md  __init__.py  _frame.c  durable.py  frame.c  frame.pyi  frame313.h  function.py  generator.py  (+2 more)
src/dispatch/integrations/: __init__.py  http.py  httpx.py  openai.py  requests.py  slack.py
src/dispatch/signature/: __init__.py  config.py  digest.py  key.py  request.py  sign.py  signature.py  verify.py
src/dispatch/test/: __init__.py  __main__.py  client.py  fastapi.py  flask.py  http.py  httpx.py  server.py  service.py
src/dispatch/v1/: metadata_pb2.py  metadata_pb2.pyi
tests/: __init__.py  dispatch_service.py  executor_service.py  function_service.py  task_service.py  test_aiohttp.py  test_client.py  test_fastapi.py  test_flask.py  test_full.py  test_http.py  test_ring.py
tests/dispatch/: test_any.py  test_config.py  test_error.py  test_function.py  test_scheduler.py  test_status.py
tests/dispatch/signature/: test_digest.py  test_key.py  test_signature.py
v0.0.11/: 404.html  index.html
v0.0.12/: index.html
v0.0.12/search/: search_index.json
v0.0.13/reference/dispatch/: index.html
v0.0.13/search/: search_index.json
v0.0.14/: 404.html
v0.0.14/reference/SUMMARY/: index.html
v0.0.14/reference/dispatch/: index.html
v0.1.0/search/: search_index.json
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  index.html  objects.inv
v0.3.0/search/: search_index.json
v0.4.0/reference/dispatch/: index.html
v0.4.0/search/: search_index.json
v0.4.1/reference/SUMMARY/: index.html
v0.4.1/reference/dispatch/: index.html
v0.4.1/search/: search_index.json
v0.4.2/reference/dispatch/: index.html
v0.5.0/: 404.html  objects.inv
v0.5.0/search/: search_index.json
v0.5.1/: 404.html  index.html  objects.inv
v0.6.0/search/: search_index.json
v0.7.1/: index.html  objects.inv
v0.7.1/reference/dispatch/: index.html
v0.8.0/: index.html
v0.8.0/reference/SUMMARY/: index.html
v0.8.0/search/: search_index.json
(+228 files in other folders)
