[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch-functions"
description = "Python SDK for Dispatch Stateful Functions"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = [
    "grpcio >= 1.60.0",
    "protobuf >= 4.24.0",
    "types-protobuf >= 4.24.0.20240129",
    "grpc-stubs >= 1.53.0.5",
    "http-message-signatures >= 0.4.4"
]

[project.optional-dependencies]
dev = [
    "black >= 24.1.0",
    "isort >= 5.13.2",
    "mypy >= 1.8.0",
    "fastapi >= 0.109.0",
    "httpx >= 0.26.0",
    "coverage >= 7.4.1",
    "requests >= 2.31.0",
    "types-requests >= 2.31.0.20240125"
]

docs = [
     "mkdocs==1.5.3",
     "mkdocstrings[python]==0.24.0",
     "mkdocs-material==9.5.9",
     "mike==2.0.0"
]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.coverage.run]
omit = [
    "*_pb2_grpc.py",
    "*_pb2.py",
    "tests/*",
    "src/buf/*"
]

[tool.mypy]
exclude= '^src/buf'
