[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch-py"
description = "Develop reliable distributed systems with Dispatch."
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
    "aiohttp >= 3.9.4",
    "protobuf >= 4.24.0",
    "types-protobuf >= 4.24.0.20240129",
    "http-message-signatures >= 0.5.0",
    "tblib >= 3.0.0",
    "typing_extensions >= 4.10"
]

[project.optional-dependencies]
fastapi = ["fastapi"]
flask = ["flask"]
httpx = ["httpx"]
lambda = ["awslambdaric"]

dev = [
    "httpx >= 0.27.0",
    "black >= 24.1.0",
    "isort >= 5.13.2",
    "mypy >= 1.10.0",
    "pytest >= 8.0.0",
    "pytest-asyncio >= 0.23.7",
    "fastapi >= 0.109.0",
    "coverage >= 7.4.1",
    "requests >= 2.31.0",
    "types-requests >= 2.31.0.20240125",
    "uvicorn >= 0.28.0",
    "types-Flask >= 1.1.6",
    "flask >= 3",
    "awslambdaric-stubs"
]

docs = [
    "mkdocs==1.5.3",
    "mkdocstrings[python]==0.24.0",
    "mkdocs-material==9.5.9",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mike==2.0.0",
]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.coverage.run]
omit = ["*_pb2.py", "tests/*", "examples/*", "src/buf/*"]

[tool.mypy]
exclude = [
  '^src/buf',
  '^tests/examples',
]

[tool.pytest.ini_options]
testpaths = ['tests']
